--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="#" style="--i:9"><i class='bx bxl-twitter'></i></a>
                 <a href="#" style="--i:10"><i class='bx bxl-youtube'></i></a>
             </div>
-            <a href="" class="btn-box">Download CV</a>
+            <a href="./thatchayani_CV.pdf" class="btn-box">Download CV</a>
             <div class="home-img">
                 <img src="./pic2.jpg">
             </div>
